--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
     "expo": "~38.0.8",
+    "expo-constants": "^9.1.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^3.1.1",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
